@@ -647,17 +647,12 @@ totem_embedded_launch_player (TotemEmbedded *embedded,
 		uri = embedded->current_uri;
 	}
 
-#if GTK_CHECK_VERSION(2,13,0)
 	ctx = G_APP_LAUNCH_CONTEXT (gdk_app_launch_context_new ());
 	screen = gtk_widget_get_screen (embedded->window);
 	gdk_app_launch_context_set_screen (GDK_APP_LAUNCH_CONTEXT (ctx), screen);
 
 	gdk_app_launch_context_set_timestamp (GDK_APP_LAUNCH_CONTEXT (ctx), user_time);
 	gdk_app_launch_context_set_icon (GDK_APP_LAUNCH_CONTEXT (ctx), g_app_info_get_icon (embedded->app));
-#else
-	ctx = NULL;
-	screen = NULL;
-#endif
 
 	result = g_app_info_launch_uris (embedded->app, uris, ctx, NULL);
 
